force-app/main/default/objects/Food_and_Beverage__c/Food_and_Beverage__c.object-meta.xml
<CustomObject>
    <label>Food and Beverage</label>
    <nameField>
        <label>Food and Beverage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Foods and Beverages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>