force-app/main/default/objects/Food_and_Beverage__c/fields/Actual_F_B_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_F_B_Cost__c</fullName>
    <formula>Number_of_attendees__c  *  Costing_Per_Plate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual F&amp;B Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>