force-app/main/default/objects/Food_and_Beverage__c/fields/Beverage_Options__c.field-meta.xml
<CustomField>
    <fullName>Beverage_Options__c</fullName>
    <label>Beverage Options</label>
    <type>TextArea</type>
</CustomField>