force-app/main/default/objects/Food_and_Beverage__c/fields/Caterer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Caterer_Contact__c</fullName>
    <description>Added particular vendor so we get that persons contact number</description>
    <formula>Vendor__r.Contact_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caterer Contact</label>
    <type>Text</type>
</CustomField>