force-app/main/default/objects/Food_and_Beverage__c/fields/Caterer_Email__c.field-meta.xml
<CustomField>
    <fullName>Caterer_Email__c</fullName>
    <description>added particular vendor email</description>
    <formula>Vendor__r.Contact_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caterer Email</label>
    <type>Text</type>
</CustomField>