force-app/main/default/objects/Food_and_Beverage__c/fields/Check_in_Status__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Status__c</fullName>
    <label>Check-in Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Checked In</fullName>
            </value>
            <value>
                <fullName>Checked In</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>