force-app/main/default/objects/Food_and_Beverage__c/fields/Costing_Per_Plate__c.field-meta.xml
<CustomField>
    <fullName>Costing_Per_Plate__c</fullName>
    <label>Costing Per Plate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>