force-app/main/default/objects/Food_and_Beverage__c/fields/Estimated_F_B_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_F_B_Cost__c</fullName>
    <label>Estimated F&amp;B Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>