force-app/main/default/objects/Food_and_Beverage__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Name</label>
    <referenceTo>Event_Details__c</referenceTo>
    <relationshipLabel>Foods and Beverages</relationshipLabel>
    <relationshipName>Foods_and_Beverages</relationshipName>
    <type>Lookup</type>
</CustomField>