force-app/main/default/objects/Food_and_Beverage__c/fields/F_B_ID__c.field-meta.xml
<CustomField>
    <fullName>F_B_ID__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>F&amp;B ID</label>
    <type>AutoNumber</type>
</CustomField>