force-app/main/default/objects/Food_and_Beverage__c/fields/Meal_Type__c.field-meta.xml
<CustomField>
    <fullName>Meal_Type__c</fullName>
    <label>Meal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>Brunch</fullName>
            </value>
            <value>
                <fullName>Snack</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>