force-app/main/default/objects/Food_and_Beverage__c/fields/Menu_Type__c.field-meta.xml
<CustomField>
    <fullName>Menu_Type__c</fullName>
    <label>Menu Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vegetarian Menu</fullName>
            </value>
            <value>
                <fullName>Non-Vegetarian Menu</fullName>
            </value>
            <value>
                <fullName>Specialty Menu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>