force-app/main/default/objects/Food_and_Beverage__c/fields/Number_of_attendees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_attendees__c</fullName>
    <label>Number of attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>