force-app/main/default/objects/Food_and_Beverage__c/fields/Ticket_Price__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Price__c</fullName>
    <label>Ticket Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>