force-app/main/default/objects/Food_and_Beverage__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Foods and Beverages</relationshipLabel>
    <relationshipName>Foods_and_Beverages</relationshipName>
    <type>Lookup</type>
</CustomField>